# EXOTIC

./: .exotic.py.swp  .exotic_BASE_25800.py.swp  .exotic_LOCAL_25800.py.swp  .exotic_REMOTE_25800.py.swp  .gitignore  AUTHORS.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXOTIC_Standard.ipynb  LICENSE  MANIFEST.in  README.md  eaConf.json  elca.py  ewcoords.fits  exofop.py  exotic.py  exotic_BACKUP_25800.py  exotic_REMOTE_25800.py  exotic_installation_linux.sh  exotic_installation_mac.sh  gaelLCFuncs.py  gaelLDNL.py  gaelLDQparams.py  inits.json  inits.txt  occultquad.py  packages_installation_linux.sh  pyproject.toml  requirements-base.txt  requirements.txt  run_exotic_linux.sh  run_exotic_mac.command  run_exotic_windows.bat  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  python-publish.yml  ruff.yml
.github/workflows/codeql/: codeql-config.yml
Documentation/: README.md
Documentation/Brazilian Portuguese (Português do Brasil)/: tradutores.md
Documentation/Brazilian_Portuguese/: README.md
Documentation/English/: EXOTIC Installation Instructions for Ubuntu.md  EXOTIC Installation Instructions for Windows 10.md  EXOTIC Installation Instructions for Windows Users.md  EXOTIC-Installation-Instructions-for-Mac-Users.md  How-to-Run-EXOTIC-in-Fedora-Linux.md  How-to-Run-EXOTIC-in-openSUSE-Linux.md  example_output.txt
Documentation/English (original)/: Translators.md
Documentation/German/: Beispiel_Output.txt  translators.md
docs/: README.md  system_prompt.txt
docs/papers/: fatahi2024.md  pearson2022.md
docs/regions/English/: EXOTIC Installation Instructions for Ubuntu.md  How-to-select-comparision-stars-using-AAVSO-Star-Charts.txt
docs/regions/Spanish (Español)/: Introducción a los Exoplanetas (Introduction-to-Exoplanets) - SPA.docx  translators.md
examples/: ConvertEspressoFlatfile.ipynb  Exoplanet_Watch_API.ipynb  Exotic_Notebook.ipynb  GUI.ipynb  Multiple_Lightcurve_Fit_Detrended.ipynb  README.md  RVDataCollector.ipynb  SURPRVdownloadREADME.rtf  Target_Selection.ipynb  contamination.py  exotic4tess.py  fdinteractive_fitter .py  fdinteractive_fitter.ipynb  fdinteractive_fitter.py  global_fitter_unit_test.py  interactive_fitter.py  lc_fitter_unit_test.py  output_aavso.py  sampledata.json  spitzer_lc_fit.py  tess.py  tess_environment.yml  tessresults_manager.py  wasp43b_irac1_transit.txt
examples/ephemeris/: fit_decay.py  fit_ephemeris.py
examples/joint_fit/: README.md  criteria.tbl  prv.cookies  targetlist.csv
examples/joint_fit/radial_velocity/data/: CoRoT-1.csv  CoRoT-14.csv  CoRoT-2.csv  HAT-P-1.csv  HAT-P-23.csv  HAT-P-28.csv  HAT-P-42.csv  HAT-P-46.csv  HAT-P-59.csv  HAT-P-66.csv  HATS-2.csv  HATS-24.csv  HATS-30.csv  HATS-31.csv  HATS-60.csv  HD3167.csv  HD80653.csv  K2-141.csv  K2-31.csv  K2-34.csv  KELT-10.csv  KELT-11.csv  (+40 more)
examples/joint_rv_transit/: 2458888_08_lightcurve.csv  README.md  joint_fit.py
examples/multiple_transit/: Multiple_Lightcurve_fit.ipynb  multi_fit_example.py
examples/nbody/: README.md  example.py
examples/phase_curve/: phase_curve.py
examples/radial_velocity/: HD80606_RV.csv  README.md  RVDataCollector.ipynb  RV_Query.ipynb  rv_example.py  rv_query_and_fit.ipynb
examples/radial_velocity/data/: 55Cnc.csv  CoRoT-1.csv  CoRoT-13.csv  CoRoT-16.csv  CoRoT-18.csv  CoRoT-19.csv  CoRoT-2.csv  CoRoT-23.csv  CoRoT-25.csv  CoRoT-26.csv  CoRoT-27.csv  CoRoT-3.csv  CoRoT-4.csv  CoRoT-5.csv  CoRoT-6.csv  CoRoT-8.csv  HAT-P-1.csv  HAT-P-11.csv  HAT-P-12.csv  HAT-P-13.csv  HAT-P-14.csv  HAT-P-15.csv  HAT-P-16.csv  HAT-P-18.csv  HAT-P-2.csv  HAT-P-20.csv  HAT-P-21.csv  HAT-P-22.csv  HAT-P-23.csv  HAT-P-24.csv  HAT-P-25.csv  HAT-P-26.csv  HAT-P-27.csv  HAT-P-28.csv  HAT-P-29.csv  HAT-P-3.csv  HAT-P-32.csv  HAT-P-33.csv  HAT-P-39.csv  HAT-P-4.csv  (+151 more)
examples/radial_velocity/hd80606/: hd80606_rv.txt  hd80606_rv_dist.txt  rv_example.py
examples/single_transit/: transit_fit_example.py
examples/tess/: candidate_inits_from_exofop.py  tess.py  tess_individ_lc.py
examples/tess/candidates/: for_exotic_py_candidate_inits_maker.py  for_toi_py_candidate_inits_maker.py  toi.py  toi_individ_lc.py
exotic/: GUI.ipynb  VSPoutput_files.py  __init__.py  animate.py  constants.py  exotic-gui.py  exotic.py  exotic_gui.py  fit_centroid_old.py  gui.py  inits.json  inputs.py  output_files.py  planetary_parameters.py  plate_status.py  plots.py  test_advanced_collab_terminal.py  util.py  utils.py  version.py
exotic/api/: Entry 1:.csv  __init__.py  aavso.py  all_exofop_tic_test.py  colab.py  elca.py  ephemeris.py  ew.py  exofop.py  exofop_tess_tois.csv  filters.py  gaelLDNL.py  gael_ld.py  joint_elca.py  joint_fitter.py  ld.py  nbody.py  nea.py  nested_linear_fitter.py  output_aavso.py  plate_solution.py  plotting.py  rv.py  rv_archive.py  rv_csv.py  rv_fitter.py  rv_query.py  rvfitter_elca.py  rvmapper.py  test_exofop.py  test_exofop_enhanced.py  test_exoplanet_not_found_nea.py  test_nea.py  tic-all.json  tic-formatted.json  user_inputs.py  versioning.py
exotic/api/bcp/: PINT_erfautils.py  utc_tdb.py
exotic/api/tests/: __init__.py  test_ld.py
exotic/googleCollab/: EXOTIC_Advanced.ipynb  exotic_advanced.py
exotic/terminal/: coordinates.py
exotic/tests/: test_utils.py
installers/win/: README.txt
sample-data/: README.txt
tests/: README.md  test_ld.py
(+84 files in other folders)
