[build-system]
requires = [
    "setuptools>=62.6",
    "wheel>=0.37.1",
    "setuptools_scm[toml]>=6.4.2",
    "oldest-supported-numpy",
    "cython~=0.29.32;platform_system!='Windows'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "exotic/version.py"
write_to_template = '__version__ = "{version}"'
