[build-system]
requires = [
    "Cython~=3.0;platform_system!='Windows'",
    "importlib-metadata>=3.6;python_version<='3.7'",
    "oldest-supported-numpy",
    "setuptools",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "exotic/version.py"
write_to_template = "__version__ = '{version}'\n"
