[metadata]
name = exotic
url = https://github.com/rzellem/EXOTIC
download_url = https://github.com/rzellem/EXOTIC/releases/latest
project_urls =
    Documentation = https://github.com/rzellem/EXOTIC/wiki
    Site = https://exoplanets.nasa.gov/exoplanet-watch
    Source = https://github.com/rzellem/EXOTIC
    Tracker = https://github.com/rzellem/EXOTIC/issues
    Download = https://github.com/rzellem/EXOTIC/releases/latest
author = Exoplanet Watch at NASA JPL
author_email = exoplanetwatch@jpl.nasa.gov
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Astronomy
license = Proprietary -- Copyright (c) 2019-present, California Institute of Technology.
license_files =
    LICENSE
description = EXOTIC: EXOplanet Transit Interpretation Code
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = nasa, jpl, exoplanet, transit, citizen science, astronomy, bayesian, nested-sampler

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
packages =
    exotic
    exotic.api
install_requires =
    astroalign~=2.4
    astropy>=4.3
    astroquery~=0.4
    barycorrpy~=0.4
    dynesty>=1.2.3,<2.1.0;platform_system=='Windows'
    holoviews~=1.15
    LDTk~=1.7
    lmfit~=1.0
    matplotlib>=3.4
    numpy~=1.21
    pandas~=1.3
    panel~=0.13.1
    photutils>=0.7
    pylightcurve~=4.0.1
    python_dateutil~=2.8
    python_version
    pyvo~=1.2
    requests~=2.28
    scipy~=1.7
    scikit-image~=0.18
    tenacity~=8.1
    ultranest~=3.5.5;platform_system!='Windows'

[options.entry_points]
console_scripts =
    exotic = exotic.exotic:main
    exotic-gui = exotic.exotic_gui:main

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
