[metadata]
name = exotic
url = https://github.com/rzellem/EXOTIC
download_url = https://github.com/rzellem/EXOTIC/releases/latest
project_urls =
    Documentation = https://github.com/rzellem/EXOTIC/wiki
    Site = https://exoplanets.nasa.gov/exoplanet-watch
    Source = https://github.com/rzellem/EXOTIC
    Tracker = https://github.com/rzellem/EXOTIC/issues
    Download = https://github.com/rzellem/EXOTIC/releases/latest
author = Exoplanet Watch at NASA JPL
author_email = exoplanetwatch@jpl.nasa.gov
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Astronomy
license = Proprietary -- Copyright (c) 2019-present, California Institute of Technology.
license_files =
    LICENSE
description = EXOTIC: EXOplanet Transit Interpretation Code
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = nasa, jpl, exoplanet, transit, citizen science, astronomy, bayesian, nested-sampler

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
packages =
    exotic
    exotic.api
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    exotic = exotic.exotic:main
    exotic-gui = exotic.exotic_gui:main

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
